# discopy

./: .codecov.yml  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  AGENTS.md  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  LICENSE  PERFORMANCE_REVIEW.md  PLAN.md  README.md  RULES.md  STYLE.md  TODO.md  __init__.py  _test.sh  _version.py  alice-loves-noisy-opt.ipynb  cartesian.py  cat.py  category.py  circuit.py  classes.dot  config.py  conftest.py  diagram.py  disco.py  discopy.bib  drawing.py  fib.tikz  function.py  gates.py  graph.py  learner.py  matrix.py  messages.py  moncat.py  packages.dot  pivotal.py  (+18 more)
.claude/: daily-scan.md
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md  refactor.md
.github/workflows/: benchmark.yml  build.yml  build_test.yml  codspeed.yml  docs-static.yml  no-todo-on-main.yml
Alexis/.agents/: AGENTS.pipeline.md  BIRDSONG.md  DAYLIGHT.md  EVENING.md  HANDOFF.md  ROUTINE.md  RULES.md  check-approval.sh
benchmark/: catgpt.py  modal_app.py  report.py  test_catgpt.py  test_composition.py  test_foliation_adder.py
discopy/: __init__.py  _drawing.py  abc.py  balanced.py  biclosed.py  braided.py  cartesian.py  cartesian0.py  cat.py  ccg.py  cfg.py  circuit.py  closed.py  cmap.py  combinatorial_map.py  comonoid.py  compact.py  computer.py  config.py  cqmap.py  discoyaml.py  drawing.py  feedback.py  frobenius.py  grammar.py  hopf.py  hypergraph.py  int.py  interaction.py  localsum_rewriting.py  magmatic.py  markov.py  matrix.py  messages.py  moncat.py  monoidal.py  neural.py  neural_rdiff.py  neural_torch.py  operad.py  (+25 more)
discopy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
discopy/drawing/: __init__.py  backend.py  drawing.py  grid.py  gui.html  gui.py  html.py  layout.py  legacy.py  test.py  typst_ast.py  widget.py
discopy/grammar/: __init__.py  abstract.py  categorial.py  ccg.py  cfg.py  datalog.py  dependency.py  formal.py  parser.py  pregroup.py  spacyinterface.py  thue.py
discopy/kleisli/: __init__.py  additive.py  channel.py  monad.py  multiplicative.py
discopy/learning/: para.py
discopy/python/: __init__.py  additive.py  finset.py  function.py  lambda_token.py  multiplicative.py
discopy/quantum/: __init__.py  ansatze.py  channel.py  circuit.py  cqmap.py  drawing.py  gates.py  oplus.py  optics.py  pennylane.py  tk.py  zx.py
docs/: api-concrete.rst  api-core.rst  api-grammar.rst  api-other.rst  api-quantum.rst  api-semantics.rst  api-syntax.rst  api.rst  biclosed.rst  cat.rst  circuit.rst  conf.py  disco.rst  discopy.bib  discopy.biclosed.rst  discopy.cat.rst  discopy.grammar.ccg.rst  discopy.grammar.cfg.rst  discopy.grammar.pregroup.rst  discopy.grammar.rst  discopy.monoidal.rst  discopy.quantum.circuit.rst  discopy.quantum.cqmap.rst  discopy.quantum.gates.rst  discopy.quantum.rst  discopy.quantum.tk.rst  discopy.quantum.zx.rst  discopy.rigid.rst  discopy.tensor.rst  drawing.rst  export_notebooks.py  index.rst  matrix.rst  moncat.rst  monoidal.rst  nlp.rst  notebooks.advanced.rst  notebooks.basics.rst  notebooks.qnlp.rst  notebooks.rst  (+8 more)
docs/_ext/: bases-fullname.py  youtube.py
docs/_static/: custom.css
docs/_style/: custom.css
docs/_templates/: class.rst  module.rst
docs/api/: architecture.html  biclosed.rst  cat.rst  core.rst  discopy.drawing.Backend.rst  discopy.drawing.Equation.rst  discopy.drawing.MatBackend.rst  discopy.drawing.Node.rst  discopy.drawing.TikzBackend.rst  discopy.drawing.diagram2nx.rst  discopy.drawing.diagramize.rst  discopy.drawing.nx2diagram.rst  discopy.grammar.Rule.rst  discopy.grammar.Word.rst  drawing.rst  grammar.ccg.rst  grammar.cfg.rst  grammar.pregroup.rst  grammar.rst  hypergraph.rst  index.rst  matrix.rst  other.rst  quantum.circuit.rst  quantum.cqmap.rst  quantum.gates.rst  quantum.optics.rst  quantum.pennylane.rst  quantum.rst  quantum.tk.rst  semantics.rst  summary.html  syntax.rst  tensor.rst
docs/applications/: 1-grammars.rst  2-tensors.ipynb  3-peirce.md  4-channels.md  5-optics.md  7-qnlp-tutorial.ipynb
docs/biclosed/: Diagram.rst  Ty.rst  index.rst
docs/cartesian/: Box.rst  Copy.rst  Diagram.rst  Discard.rst  Function.rst  Functor.rst  Id.rst  PythonFunctor.rst  Swap.rst  disco.rst  index.rst
docs/cat/: AxiomError.rst  Diagram.rst  Functor.rst  Id.rst  Ob.rst  Quiver.rst  Sum.rst  cat.Box.rst  cat.Diagram.rst  discopy.cat.Box.rst  (+7 more)
figures/: alice-loves-bob.tikz
notebooks/: 21-05-05-tallcat.ipynb  21-06-08-qpl.ipynb  Untitled.ipynb  alice-loves-CQCircuit.ipynb  alice-loves-bob-CQCircuit.ipynb  alice-loves-bob.ipynb  alice-loves-noisy-opt.ipynb  autonomization.ipynb  bell-test.ipynb  bob-is-rich.ipynb  crema-di-mascarpone.ipynb  diagramification.ipynb  discopy2pyzx.ipynb  drawing-diagrams.ipynb  frobenius-anatomy.ipynb  functor-recursion.ipynb  functorial-learning.ipynb  ion-generation.ipynb  language-generation.ipynb  lasagna-recursion.ipynb  love-generation.ipynb  monoid-delooping.ipynb  neural-nets.ipynb  new-features-0.3.3.ipynb  operads.ipynb  optics-ZX-compilation.ipynb  pixels2diagram.ipynb  qnlp-experiment.ipynb  qnlp-snake-removal.ipynb  rewriting-diagrams.ipynb  rewriting-grammar.ipynb  sentence training marcello style.ipynb  snake-removal.ipynb  tensors.ipynb
qdisco/: circuit.py  qdisco.py
test/: compact.py  discoyaml.py  hypergraph.py  markov.py  monoidal.py  readme.py  requirements.txt  rigid.py  symmetric.py  test_biclosed.py  test_cartesian.py  test_cat.py  test_circuit.py  test_closed.py  test_compact.py  test_cqmap.py  test_drawing.py  test_eval.py  test_frobenius.py  test_grammar.py  test_hypergraph.py  test_localsum.py  test_matrix.py  test_monoidal.py  test_optics.py  test_parser.py  test_pregroup.py  test_python.py  test_quantum.py  test_rigid.py  test_symmetric.py  test_tensor.py  test_utils.py  test_zx.py  utils.py
tests/: copy.tex  requirements.txt  spiral.tex  test_cartesian.py  test_cat.py  test_circuit.py  test_draw.py  test_drawing.py  test_function.py  test_learner.py  test_matrix.py  test_moncat.py  test_monoidal.py  test_pivotal.py  test_pregroup.py  test_rigidcat.py
(+496 files in other folders)
