[build-system]
requires = ["uv_build>=0.11.13,<0.12"]
build-backend = "uv_build"

[project]
name = "discopy"
version = "1.2.3.dev5"
description = "The Python toolkit for computing with string diagrams."
readme = "README.md"
requires-python = ">=3.11"
license =  {file = "LICENSE"}
keywords = [
    "category theory",
    "string diagrams",
    "natural language processing",
    "quantum computing"
]
authors = [
  {name = "DisCoPy"},
  {email = "contact@discopy.org"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "networkx",
  "matplotlib",
  "pillow"
]

[dependency-groups]
dev = [
    "coverage",
    "nbmake",
    "pyproject-flake8",
    "pylint",
    "pytest",
]
docs = [
    "IPython",
    "ipykernel == 6.23.*",
    "jinja2 == 3.1.*",
    "myst-parser == 2.0.*",
    "nbsphinx == 0.9.*",
    "sphinx == 7.2.*",
    "sphinx-book-theme == 1.1.*",
    "sphinxcontrib-bibtex == 2.5.*",
    "sphinxcontrib-youtube == 1.4.*",
]
test = [
    "jax<0.6.0",
    "jaxlib<0.6.0",
    "lxml",
    "nltk",
    "pytket",
    "pyzx",
    "qiskit",
    "qiskit-aer",
    "sympy",
    "tensornetwork",
    "torch",
]

[project.optional-dependencies]
quantum = [
    "pytket",
    "pyzx",
    "sympy",
    "tensornetwork",
    "jax<0.6.0",
    "jaxlib<0.6.0",
    "torch",
    "qiskit",
    "qiskit-aer",
]
grammar = [
    "nltk",
]
xml = [
    "lxml",
]
test = [
    "jax<0.6.0",
    "jaxlib<0.6.0",
    "lxml",
    "nltk",
    "pytket",
    "pyzx",
    "qiskit",
    "qiskit-aer",
    "sympy",
    "tensornetwork",
    "torch",
]
all = [
    "IPython",
    "ipykernel == 6.23.*",
    "jax<0.6.0",
    "jaxlib<0.6.0",
    "jinja2 == 3.1.*",
    "lxml",
    "myst-parser == 2.0.*",
    "nbsphinx == 0.9.*",
    "nltk",
    "pytket",
    "pyzx",
    "qiskit",
    "qiskit-aer",
    "sphinx == 7.2.*",
    "sphinx-book-theme == 1.1.*",
    "sphinxcontrib-bibtex == 2.5.*",
    "sphinxcontrib-youtube == 1.4.*",
    "sympy",
    "tensornetwork",
    "torch",
]
docs  = [
    "IPython",
    "ipykernel == 6.23.*",
    "jinja2 == 3.1.*",
    "myst-parser == 2.0.*",
    "nbsphinx == 0.9.*",
    "sphinx == 7.2.*",
    "sphinx-book-theme == 1.1.*",
    "sphinxcontrib-bibtex == 2.5.*",
    "sphinxcontrib-youtube == 1.4.*",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.build-backend]
module-root = ""
source-exclude = ["discopy/version.py"]
wheel-exclude = ["discopy/version.py"]

[project.urls]
Homepage = "https://discopy.org"
Documentation = "https://docs.discopy.org"
Repository = "https://github.com/discopy/discopy"
Issue-Tracker = "https://github.com/discopy/discopy/issues"
Download = "https://pypi.org/project/discopy"

[tool.flake8]
extend-ignore = [
    "E731",
    "E741",
    "E743",
    "F811",
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "discopy",
    "test/*/*.py",
    "docs/notebooks/*.ipynb",
]
norecursedirs = [
    "test/utils/pickles/TODO",
]
addopts = "--doctest-modules --nbmake --ignore=test/utils/pickles/TODO"
