[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

# Pin package discovery to discopy* so top-level dirs (benchmark/, plans/, ...)
# don't trip setuptools flat-layout "multiple top-level packages" detection.
[tool.setuptools.packages.find]
include = ["discopy*"]

[project]
name = "discopy"
dynamic = ["version"]
description = "The Python toolkit for computing with string diagrams."
readme = "README.md"
requires-python = ">=3.12"
license =  {file = "LICENSE"}
keywords = [
    "category theory",
    "string diagrams",
    "natural language processing",
    "quantum computing"
]
authors = [
  {name = "DisCoPy"},
  {email = "contact@discopy.org"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy",
  "networkx",
  "matplotlib",
  "pillow",
  "typst>=0.15.0",
]

[dependency-groups]
dev = [
    "coverage",
    "nbmake",
    "pyproject-flake8",
    "pylint",
    "pytest",
    "pytest-benchmark",
    "polars",
    "marimo>=0.23.15",
]
docs = ["discopy[docs]"]
quantum = ["discopy[quantum]"]
grammar = ["discopy[grammar]"]
all = [
    { include-group = "dev" },
    { include-group = "docs" },
    { include-group = "quantum" },
    { include-group = "grammar" },
]

[project.optional-dependencies]
quantum = [
    "pytket",
    "pyzx == 0.7.3",
    "sympy",
    "tensornetwork",
    "jax",
    "jaxlib",
    "torch",
    "qiskit",
    "qiskit-aer",
    "pennylane>=0.45.0",
    "pennylane-qiskit>=0.45.0",
    "quimb",
]
grammar = [
    "nltk",
]
test = [
    "discopy[grammar,quantum]",
    "coverage",
    "nbmake",
    "pyproject-flake8",
    "pylint",
    "pytest",
]
docs  = [
    "IPython",
    "anywidget",
    "ipykernel == 6.23.*",
    "jinja2 == 3.1.*",
    "myst-parser == 2.0.*",
    "nbsphinx == 0.9.*",
    "sphinx == 7.2.*",
    "sphinx-book-theme == 1.1.*",
    "sphinxcontrib-bibtex == 2.5.*",
    "sphinxcontrib-tikz == 0.4.*",
    "sphinxcontrib-youtube == 1.4.*",
]
typst = [
    "typst >= 0.15.0",
]

[tool.setuptools_scm]
version_file = "discopy/version.py"

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.build-backend]
module-root = ""
source-exclude = ["discopy/version.py"]
wheel-exclude = ["discopy/version.py"]

[project.urls]
Homepage = "https://discopy.org"
Documentation = "https://docs.discopy.org"
Repository = "https://github.com/discopy/discopy"
Issue-Tracker = "https://github.com/discopy/discopy/issues"
Download = "https://pypi.org/project/discopy"

[tool.flake8]
extend-ignore = [
    "E731",
    "E741",
    "E743",
    "F811",
]
per-file-ignores = [
    "__init__.py:F401"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "discopy",
    "test/readme.py",
    "test/*/*.py",
    "docs/notebooks/*.ipynb",
]
addopts = "--doctest-modules --nbmake"

[tool.coverage.report]
fail_under = 98
