[metadata]
description-file = README.md

[pycodestyle]
ignore = E731,E741,E743,W503,

[tool:pytest]
python_files = test/*/*.py
addopts =
    --ignore=discopy/quantum
    --ignore=test/quantum
    --ignore=discopy/tensor.py
    --ignore=test/concrete/tensor.py
    --ignore=discopy/matrix.py
    --ignore=test/concrete/matrix.py
    --ignore=test/core/drawing.py
    --ignore=discopy/drawing.py
