[metadata]
description-file = README.md

[pycodestyle]
ignore = E731,E741,E743,W503

[tool:pytest]
python_files = test/*/*.py
addopts =
    --ignore=discopy/quantum/tk.py
    --ignore=discopy/quantum/ansatze.py
    --ignore=test/quantum/circuit.py
    --ignore=test/quantum/eval.py
    --ignore=test/quantum/optics.py
    --ignore=test/syntax/drawing.py
    --ignore=discopy/drawing.py
