[metadata]
name = discopy
description = The Python toolkit for computing with string diagrams.
long_description = file: README.md
long_description_content_type = text/markdown
author = DisCoPy
author_email = contact@discopy.org
license = BSD 3
license_files = file: LICENSE
url = https://discopy.org
download_url = https://pypi.org/project/discopy
project_urls =
    Documentation = https://docs.discopy.org
    Source Code = https://github.com/discopy/discopy
    Issue Tracker = https://github.com/discopy/discopy/issues
keywords =
    category theory
    string diagrams
    natural language processing
    quantum computing
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering

[options]
packages =
    discopy
    discopy.drawing
    discopy.grammar
    discopy.quantum
install_requires =
    numpy >= 1.18.1
    networkx >= 2.4
    matplotlib >= 3.1.2
    pillow >= 6.2.1
python_requires = >=3.9

[options.extras_require]
test =
    pytest
    coverage
    pycodestyle
    pytket
    pyzx >= 0.7.0
    sympy == 1.9
    tensorflow
    tensornetwork
    jax
    jaxlib
    torch
    pennylane >= 0.29.1
    pennylane-qiskit
    pennylane-honeywell
    lxml
    nltk
    pylint

docs =
    sphinx == 4.5.0
    sphinx-book-theme == 0.3.3
    m2r2 == 0.3.2
    nbsphinx == 0.8.9
    ipykernel == 6.17.0
    sphinxcontrib-youtube == 1.2.0
    jinja2 == 3.0.3
    sphinxcontrib-bibtex == 2.4.0
    IPython

[pycodestyle]
ignore = E731,E741,E743,W503

[tool:pytest]
python_files = test/*/*.py
